--- a/style.css
+++ b/style.css
@@ -1,11 +1,34 @@
+.wrap{
+	background-color:#282c37;
+	padding:10px;	
+	border-radius:10px;
+	min-height:100%;
+}
+.wrap h1, .wrap label, .wrap form  p{
+	color: #d9e1e8;
+}
+
+.wrap .button{
+	color:#2b90d9 !important;
+	border-color:#2b90d9 !important;
+	box-shadow:none !important;
+	text-shadow:none !important;
+	font-weight:bold;
+	background-color:#FFF !important;
+}
+.wrap input, .wrap textarea{
+	background-color:transparent !important;
+	color:#d9e1e8 !important;
+	border-radius:4px;
+}
 .spacer{
 	margin-top: 20px;
 }
 
 .account{
-	border: 1px solid silver;
-	background-color: white;
+	border: 1px solid #d9e1e8;
 	padding: 15px;
+	border-radius:4px;
 	float:left;
 
 }
@@ -22,13 +45,14 @@
 }
 
 .details .link{
-	color:black;
+	color:#d9e1e8;
 	text-decoration: none;
 }
 
 .connected{
-	color: #00AA00;
+	color: #2b90d9;
 	font-size: 16px;
+	font-weight:bold;
 	margin-bottom: 10px;
 }
 
