--- a/style.css
+++ b/style.css
@@ -68,10 +68,106 @@
 	width: 100%;
 }
 
+.advanced_setting{
+	display:none;
+}
+
+#show_advanced_configuration{
+	color:#000 !important;
+	border-color:#000 !important;
+}
+
+.wrap .button:hover{
+	background-color:transparent;
+}
+
+.wrap input, .wrap textarea{
+	background-color:transparent !important;
+	color:#000 !important;
+	border-color:#000;
+	border-radius:4px;
+}
+.spacer{
+	margin-top: 20px;
+}
+
+.account{
+	border: 1px solid #000;
+	padding: 15px;
+	border-radius:4px;
+	float:left;
+
+}
+
+.m-avatar{
+	float:left;
+	border-radius: 100px;
+	margin-right: 20px;
+	width: 60px;
+}
+
+.details{
+	float:left;
+}
+
+.details .link{
+	color:#000;
+	text-decoration: none;
+}
+
+.connected{
+	color: #2b90d9;
+	font-size: 16px;
+	font-weight:bold;
+	margin-bottom: 10px;
+}
+
+.disconnected{
+	color: #FF0000;
+	font-size: 16px;
+	text-align: center;
+	width: 100%;
+}
+
+.advanced_setting{
+	display:none;
+}
+
+#show_advanced_configuration{
+	background-color:transparent  !important;
+	text-align:center;
+}
+label{
+	display:inline-block;
+	vertical-align: bottom;
+	text-align:center;
+}
+
+.messageRadioButtons label{
+	padding:10px;
+	border:dashed 2px #000;
+}
+
 .github-icon{
 	margin-right: 10px;
 	text-decoration: none;
 	position: relative;
+}
+
+html > body .liberapay-btn{
+	margin-top: 3px;
+    position: absolute;
+}
+}
+
+.github-icon{
+	margin-right: 10px;
+	text-decoration: none;
+	position: relative;
+}
+
+.modeIcon{
+	height:1em;
 }
 
 html > body .liberapay-btn{
