--- a/style.css
+++ b/style.css
@@ -139,13 +139,17 @@
 label{
 	display:inline-block;
 	vertical-align: bottom;
-	opacity:0.5;
 	text-align:center;
 }
 
 .messageRadioButtons label{
 	padding:10px;
 	border:dashed 2px #000;
+	opacity:0.5;
+}
+
+.scopeRadioButtons label{
+	opacity:0.5;
 }
 
 input[type="radio"]{
